--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,8 @@
 onlyBuiltDependencies:
   - esbuild
+
+overrides:
+  '@eslint/plugin-kit@<0.3.4': '>=0.3.4'
+  brace-expansion@>=1.0.0 <=1.1.11: '>=1.1.12'
+  brace-expansion@>=2.0.0 <=2.0.1: '>=2.0.2'
+  tmp@<=0.2.3: '>=0.2.4'
