--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,4 @@
 registry=https://registry.npmjs.org/
-@lhq:registry=http://localhost:4873/
+#@lhq:registry=http://localhost:4873/
 
-shamefully-hoist=true
-enable-pre-post-scripts = true
+@psulek:registry=https://npm.pkg.github.com
