--- a/package.json
+++ b/package.json
@@ -418,7 +418,7 @@
         "typescript": "5.8.3"
     },
     "dependencies": {
-        "@lhq/lhq-generators": "1.0.0",
+        "@psulek/lhq-generators": "1.0.0-rc.1",
         "class-transformer": "0.5.1",
         "exceljs": "4.4.0",
         "fs-extra": "11.3.0",
