--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,7 @@ env:
   NODE_VERSION: '20.x'
   MOCHA_COLORS: '0'
   REGISTRY_URL: 'https://npm.pkg.github.com'
+  PREREALSE: 1
   
 jobs:
   build-and-publish:
@@ -37,16 +38,16 @@ jobs:
       - name: Build extension
         run: |
           pnpm run compile
-          pnpm vsce publish --no-dependencies
+          
+          if [ "${PREREALSE}" = "1" ]; then
+            pnpm vsce publish --no-dependencies --pre-release
+          else
+            pnpm vsce publish --no-dependencies
+          fi
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
+          PREREALSE: ${{ env.PREREALSE }}
 
-      - name: Publish to GitHub Packages
-        run: |
-          cd dist
-          pnpm publish --access public --provenance --no-git-checks
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     #   - name: Update release with package link
     #     uses: actions/github-script@v7
