--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,9 +40,9 @@ jobs:
         env:
           GH_READ_PACKAGES_TOKEN: ${{ secrets.GH_READ_PACKAGES_TOKEN }}
 
-      - name: Remove preinstall script
-        run: |
-          node -e "let pkg=require('./package.json'); delete pkg.preinstall; require('fs').writeFileSync('package.json', JSON.stringify(pkg, null, 2));"
+    #   - name: Remove preinstall script
+    #     run: |
+    #       node -e "let pkg=require('./package.json'); delete pkg.preinstall; require('fs').writeFileSync('package.json', JSON.stringify(pkg, null, 2));"
           
       - name: Install dependencies
         run: |
