--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -65,55 +65,55 @@ jobs:
       - name: Read package version
         run: echo "PACKAGE_VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
 
-      - name: Create vscode package
-        id: create_vscode_package
-        uses: actions/github-script@v7
-        with:
-          script: |
-            try {
-              //prev_version = require('package.json').version;
-              const prev_version = process.env.PACKAGE_VERSION;
-              console.log(`Previous version from package.json: ${prev_version}`);
+    #   - name: Create vscode package
+    #     id: create_vscode_package
+    #     uses: actions/github-script@v7
+    #     with:
+    #       script: |
+    #         try {
+    #           //prev_version = require('package.json').version;
+    #           const prev_version = process.env.PACKAGE_VERSION;
+    #           console.log(`Previous version from package.json: ${prev_version}`);
 
-              const prerelease = process.env.PRERELEASE === 'true';
-              const version = process.env.VERSION;
-              // create vscode package with version but without creating git tag
-              const args = ['vsce', 'package', '--no-dependencies', '--no-git-tag-version', version];
-              if (prerelease) {
-                args.push('--pre-release');
-              }
-              console.log(`Creating package for ${(prerelease?'pre-release':'')} version ${version} ...`);
-              const exitCode = await exec.exec('pnpm', args);
+    #           const prerelease = process.env.PRERELEASE === 'true';
+    #           const version = process.env.VERSION;
+    #           // create vscode package with version but without creating git tag
+    #           const args = ['vsce', 'package', '--no-dependencies', '--no-git-tag-version', version];
+    #           if (prerelease) {
+    #             args.push('--pre-release');
+    #           }
+    #           console.log(`Creating package for ${(prerelease?'pre-release':'')} version ${version} ...`);
+    #           const exitCode = await exec.exec('pnpm', args);
               
-              if (exitCode !== 0) {
-                  throw new Error(`Package creation failed with exit code ${exitCode}`);
-              }
+    #           if (exitCode !== 0) {
+    #               throw new Error(`Package creation failed with exit code ${exitCode}`);
+    #           }
               
-              console.log('Package created successfully.');
-            } catch (error) {
-              console.error('Error during package creation:', error);
+    #           console.log('Package created successfully.');
+    #         } catch (error) {
+    #           console.error('Error during package creation:', error);
 
-              const args = ['version', prev_version, '--allow-same-version', '--no-git-tag-version'];              
-              console.log(`Reverting to previous version ${prev_version} in package.json ...`);
-              const exitCode = await exec.exec('pnpm', args);
+    #           const args = ['version', prev_version, '--allow-same-version', '--no-git-tag-version'];              
+    #           console.log(`Reverting to previous version ${prev_version} in package.json ...`);
+    #           const exitCode = await exec.exec('pnpm', args);
               
-              if (exitCode !== 0) {
-                  throw new Error(`Reverting version failed with exit code ${exitCode}`);
-              }
+    #           if (exitCode !== 0) {
+    #               throw new Error(`Reverting version failed with exit code ${exitCode}`);
+    #           }
 
-              const release_id = context.payload.release.id;
-              console.log(`Marking release ID ${release_id} as draft ...`);
-              await github.rest.repos.updateRelease({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                release_id: release_id,
-                draft: true
-              });
-              core.setFailed('Failed to create VSCode package. Release marked as draft.');
-            }
-        env:
-          PRERELEASE: ${{ github.event.release.prerelease }}
-          VERSION: ${{ steps.extract_version.outputs.version }}
+    #           const release_id = context.payload.release.id;
+    #           console.log(`Marking release ID ${release_id} as draft ...`);
+    #           await github.rest.repos.updateRelease({
+    #             owner: context.repo.owner,
+    #             repo: context.repo.repo,
+    #             release_id: release_id,
+    #             draft: true
+    #           });
+    #           core.setFailed('Failed to create VSCode package. Release marked as draft.');
+    #         }
+    #     env:
+    #       PRERELEASE: ${{ github.event.release.prerelease }}
+    #       VERSION: ${{ steps.extract_version.outputs.version }}
 
       - name: Publish vscode package
         id: publish_vscode_package
@@ -123,9 +123,12 @@ jobs:
             try {
               const prerelease = process.env.PRERELEASE === 'true';
               const version = process.env.VERSION;
+              const prev_version = process.env.PACKAGE_VERSION;
+              
+              console.log(`Previous version from package.json: ${prev_version}`);
+
               // create vscode package with version but without creating git tag
-              const vsixFile = `lhq-editor-${version}.vsix`;
-              const args = ['vsce', 'publish', '--no-dependencies', '--no-git-tag-version', '--no-update-package-json', '-i', vsixFile];
+              const args = ['vsce', 'publish', '--no-dependencies', '--no-git-tag-version'];
               if (prerelease) {
                 args.push('--pre-release');
               }
@@ -140,6 +143,14 @@ jobs:
             } catch (error) {
               console.error('Error during package publishing:', error);
 
+              const args = ['version', prev_version, '--allow-same-version', '--no-git-tag-version'];              
+              console.log(`Reverting to previous version ${prev_version} in package.json ...`);
+              const exitCode = await exec.exec('pnpm', args);
+              
+              if (exitCode !== 0) {
+                  throw new Error(`Reverting version failed with exit code ${exitCode}`);
+              }
+              
               console.log(`Marking release as draft ...`);
               const release_id = context.payload.release.id;
               await github.rest.repos.updateRelease({
