--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Publish Package
 
 on:
-  release:
-    types: [published]
+#   release:
+#     types: [published]
   workflow_dispatch:
 
 env:
@@ -13,14 +13,18 @@ env:
   
 jobs:
   build-and-publish:
-    # act only only on published & draft releases
-    # if: github.event.release.draft == true
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+
+      - name: test
+        run: |
+          echo "head_ref: ${{ github.head_ref }}"
+          echo "ref_name: ${{ github.ref_name }}"
+          exit 1
 
       - uses: pnpm/action-setup@v4
         name: Install pnpm
@@ -64,56 +68,6 @@ jobs:
 
       - name: Read package version
         run: echo "PACKAGE_VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
-
-    #   - name: Create vscode package
-    #     id: create_vscode_package
-    #     uses: actions/github-script@v7
-    #     with:
-    #       script: |
-    #         try {
-    #           //prev_version = require('package.json').version;
-    #           const prev_version = process.env.PACKAGE_VERSION;
-    #           console.log(`Previous version from package.json: ${prev_version}`);
-
-    #           const prerelease = process.env.PRERELEASE === 'true';
-    #           const version = process.env.VERSION;
-    #           // create vscode package with version but without creating git tag
-    #           const args = ['vsce', 'package', '--no-dependencies', '--no-git-tag-version', version];
-    #           if (prerelease) {
-    #             args.push('--pre-release');
-    #           }
-    #           console.log(`Creating package for ${(prerelease?'pre-release':'')} version ${version} ...`);
-    #           const exitCode = await exec.exec('pnpm', args);
-              
-    #           if (exitCode !== 0) {
-    #               throw new Error(`Package creation failed with exit code ${exitCode}`);
-    #           }
-              
-    #           console.log('Package created successfully.');
-    #         } catch (error) {
-    #           console.error('Error during package creation:', error);
-
-    #           const args = ['version', prev_version, '--allow-same-version', '--no-git-tag-version'];              
-    #           console.log(`Reverting to previous version ${prev_version} in package.json ...`);
-    #           const exitCode = await exec.exec('pnpm', args);
-              
-    #           if (exitCode !== 0) {
-    #               throw new Error(`Reverting version failed with exit code ${exitCode}`);
-    #           }
-
-    #           const release_id = context.payload.release.id;
-    #           console.log(`Marking release ID ${release_id} as draft ...`);
-    #           await github.rest.repos.updateRelease({
-    #             owner: context.repo.owner,
-    #             repo: context.repo.repo,
-    #             release_id: release_id,
-    #             draft: true
-    #           });
-    #           core.setFailed('Failed to create VSCode package. Release marked as draft.');
-    #         }
-    #     env:
-    #       PRERELEASE: ${{ github.event.release.prerelease }}
-    #       VERSION: ${{ steps.extract_version.outputs.version }}
 
       - name: Publish vscode package
         id: publish_vscode_package
