--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
           echo "PACKAGE_VERSION=$targetVersion"
           # bodyObj='{"filters":[{"criteria":[{"filterType":7,"value":"psulek-solo.lhq-editor"}]}],"flags":131}'
           bodyObj='{"filters":[{"criteria":[{"filterType":7,"value":"$EXTENSION_ID"}]}],"flags":131}'
+          echo "bodyObj: $bodyObj"
               
           response=$(curl -s -X POST "https://marketplace.visualstudio.com/_apis/public/gallery/extensionquery" \
             -H "Content-Type: application/json" \
